# gpu_detect

./: CMakeLists.txt  gpu_detect.cpp  gpu_detect.h
